--- a/.github/workflows/term3dbot.yml
+++ b/.github/workflows/term3dbot.yml
@@ -4,10 +4,15 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 10  # Safety limit for whole job
+    timeout-minutes: 10  # Safety limit for the whole job
 
     steps:
       - name: Checkout code
