--- a/.github/workflows/term3dbot.yml
+++ b/.github/workflows/term3dbot.yml
@@ -43,7 +43,6 @@ jobs:
             Move-Item -Path "tests\*" -Destination "."
           }
 
-      # Separate step for Linux/macOS tests
       - name: Run all tests with timeout (Linux/macOS)
         if: runner.os != 'Windows'
         id: run_tests_unix
@@ -65,29 +64,32 @@ jobs:
           done
           echo "error_found=$error_found" >> $GITHUB_ENV
 
-      # Separate step for Windows tests
       - name: Run all tests with timeout (Windows)
         if: runner.os == 'Windows'
         id: run_tests_windows
+        shell: pwsh
         run: |
-          @echo off
-          echo. > raw_output.txt
-          set "error_found=0"
-          for %%f in (*.py) do (
-            echo Running %%f...
-            timeout 10 python "%%f" >> raw_output.txt 2>&1
-            if !ERRORLEVEL! EQU 0 (
-              echo [OK] %%f >> raw_output.txt
-            ) else if !ERRORLEVEL! EQU 124 (
-              echo [TIMEOUT] %%f >> raw_output.txt
-            ) else (
-              echo [ERROR] %%f >> raw_output.txt
-            )
-            if !ERRORLEVEL! NEQ 0 (
-              set "error_found=1"
-            )
-          )
-          echo error_found=%error_found% >> %GITHUB_ENV%
+          Set-Content -Path "raw_output.txt" -Value ""
+          $errorFound = 0
+          
+          Get-ChildItem -Path *.py | ForEach-Object {
+            $file = $_.Name
+            Write-Host "Running $file..."
+            
+            $process = Start-Process -FilePath "python" -ArgumentList $file -NoNewWindow -PassThru -Wait -RedirectStandardOutput "raw_output.txt" -RedirectStandardError "raw_output.txt"
+            
+            if ($process.ExitCode -ne 0) {
+              if ($process.ExitCode -eq 124) {
+                Add-Content -Path "raw_output.txt" -Value "[TIMEOUT] $file"
+              } else {
+                Add-Content -Path "raw_output.txt" -Value "[ERROR] $file"
+              }
+              $errorFound = 1
+            } else {
+              Add-Content -Path "raw_output.txt" -Value "[OK] $file"
+            }
+          }
+          Write-Output "error_found=$errorFound" >> $env:GITHUB_ENV
 
       - name: Move files back (cleanup - Linux/macOS)
         if: always() && runner.os != 'Windows'
@@ -117,7 +119,6 @@ jobs:
           path: raw_output.txt
 
       - name: Post comment result
-        # Only post the comment from one job to avoid duplicate comments.
         if: always() && matrix.os == 'ubuntu-latest'
         uses: actions/github-script@v7
         with:
@@ -126,21 +127,23 @@ jobs:
             const fs = require('fs');
             const issue_number = context.payload.pull_request.number;
             const logs = fs.readFileSync('raw_output.txt', 'utf8');
-            let summary = '### ✅ Test Results:\n';
+            const lines = logs.split('\n').filter(line => line.trim() !== '');
 
-            logs.split('\n').forEach(line => {
+            let successCount = 0;
+            let totalCount = 0;
+
+            lines.forEach(line => {
               if (line.startsWith('[OK]')) {
-                const file = line.replace('[OK] ', '');
-                summary += `✅ ${file}\n`;
-              } else if (line.startsWith('[ERROR]')) {
-                const file = line.replace('[ERROR] ', '');
-                summary += `❌ ${file}\n`;
-              } else if (line.startsWith('[TIMEOUT]')) {
-                const file = line.replace('[TIMEOUT] ', '');
-                summary += `⏳ ${file}\n`;
+                successCount++;
+                totalCount++;
+              } else if (line.startsWith('[ERROR]') || line.startsWith('[TIMEOUT]')) {
+                totalCount++;
               }
             });
 
+            const timestamp = new Date().toLocaleString();
+            const summary = `${timestamp}: ${successCount}/${totalCount}`;
+            
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
