--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,8 @@ jobs:
           reviewdog_version: latest
 
       - name: Ruff lint
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ruff check . --output-format=github | reviewdog \
             -f=github-pr-check \
@@ -33,6 +35,8 @@ jobs:
             -fail-on-error=false
 
       - name: Black check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           black --check --diff . | reviewdog \
             -f=diff \
@@ -40,6 +44,8 @@ jobs:
             -fail-on-error=false
 
       - name: isort check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           isort --check-only --diff . | reviewdog \
             -f=diff \
