--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,8 +29,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ruff check . --output-format=github | reviewdog \
-            -f=github-pr-check \
+          ruff check . --output-format=pylint | reviewdog \
+            -f=pylint \
             -reporter=github-pr-review \
             -fail-on-error=false
 
