--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,10 +29,11 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ruff check . --output-format=pylint | reviewdog \
-            -f=pylint \
+          ruff check . --output-format=json | reviewdog \
+            -f=rdjson \
             -reporter=github-pr-review \
             -fail-on-error=false
+
 
       - name: Black check
         env:
