--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,54 +1,87 @@
-name: Lint Bot
+name: Lint & Format
 
 on:
   pull_request:
+  push:
+    branches: [main]
 
 jobs:
+  # -------------------------
+  # Lint Check Job (reviewdog)
+  # -------------------------
   lint:
+    name: Lint Check (black + isort)
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - name: Install Python lint tools
+      - name: Install tools
+        run: pip install black isort reviewdog
+
+      - name: Run black check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pip install ruff black isort
+          black --check . \
+            | reviewdog -f=diff \
+              -name="black" \
+              -reporter=github-pr-review \
+              -fail-on-error=false
 
-      - name: Setup reviewdog
-        uses: reviewdog/action-setup@v1
+      - name: Run isort check
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          isort --check-only --diff . \
+            | reviewdog -f=diff \
+              -name="isort" \
+              -reporter=github-pr-review \
+              -fail-on-error=false
+
+  # -------------------------
+  # Autofix Job (optional)
+  # -------------------------
+  autofix:
+    name: Auto Format (black + isort)
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    permissions:
+      contents: write  # needed for pushing fixes
+      pull-requests: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          reviewdog_version: latest
+          ref: ${{ github.head_ref }}
 
-      - name: Ruff lint
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install tools
+        run: pip install black isort
+
+      - name: Run formatters
         run: |
-          ruff check . --output-format=json | reviewdog \
-            -f=rdjson \
-            -reporter=github-pr-review \
-            -fail-on-error=false
+          black .
+          isort .
 
-
-      - name: Black check
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and push changes
         run: |
-          black --check --diff . | reviewdog \
-            -f=diff \
-            -reporter=github-pr-review \
-            -fail-on-error=false
-
-      - name: isort check
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          isort --check-only --diff . | reviewdog \
-            -f=diff \
-            -reporter=github-pr-review \
-            -fail-on-error=false
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          if ! git diff --cached --quiet; then
+            git commit -m "style: auto-format code with black + isort"
+            git push
+          fi
