--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,8 +3,7 @@ name: Lint
 on:
   pull_request:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   lint:
@@ -21,30 +20,38 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black isort reviewdog
+          pip install black isort
 
-      # -----------------------------
-      # BLACK (formatter check)
-      # -----------------------------
-      - name: Run black with reviewdog
+      # Black check
+      - name: Run black
+        run: black --check --diff .
+
+      # isort check
+      - name: Run isort
+        run: isort --check-only --diff .
+
+      # Setup reviewdog
+      - name: Setup reviewdog
+        uses: reviewdog/action-setup@v1
+        with:
+          reviewdog_version: latest
+
+      # Report black issues via reviewdog
+      - name: Black lint (reviewdog)
         run: |
-          set -o pipefail
           black --check --diff . | reviewdog -f=diff \
             -name=black \
             -reporter=github-pr-review \
-            -fail-on-error=true || true
+            -level=error
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # -----------------------------
-      # ISORT (import sorting check)
-      # -----------------------------
-      - name: Run isort with reviewdog
+      # Report isort issues via reviewdog
+      - name: isort lint (reviewdog)
         run: |
-          set -o pipefail
           isort --check-only --diff . | reviewdog -f=diff \
             -name=isort \
             -reporter=github-pr-review \
-            -fail-on-error=true || true
+            -level=error
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
