--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,57 +1,42 @@
-name: Lint
+name: Auto Lint
 
 on:
-  pull_request:
   push:
-    branches: [ main ]
+    branches: [main]
+  pull_request:
 
 jobs:
-  lint:
+  auto-lint:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # needed so we can push formatting fixes
+      pull-requests: write  # needed if you want it to update PRs
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install formatters
+        run: pip install black isort
+
+      - name: Run auto-formatters
         run: |
-          python -m pip install --upgrade pip
-          pip install black isort
+          black .
+          isort .
 
-      # Black check
-      - name: Run black
-        run: black --check --diff .
-
-      # isort check
-      - name: Run isort
-        run: isort --check-only --diff .
-
-      # Setup reviewdog
-      - name: Setup reviewdog
-        uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
-
-      # Report black issues via reviewdog
-      - name: Black lint (reviewdog)
+      - name: Commit & push changes
         run: |
-          black --check --diff . | reviewdog -f=diff \
-            -name=black \
-            -reporter=github-pr-review \
-            -level=error
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Report isort issues via reviewdog
-      - name: isort lint (reviewdog)
-        run: |
-          isort --check-only --diff . | reviewdog -f=diff \
-            -name=isort \
-            -reporter=github-pr-review \
-            -level=error
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          if ! git diff --cached --quiet; then
+            git commit -m "style: auto-format with black & isort"
+            git push
+          fi
