--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,42 +1,52 @@
-name: Auto Lint
+name: Auto Format
 
 on:
+  pull_request:
   push:
     branches: [main]
-  pull_request:
 
 jobs:
-  auto-lint:
+  format:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # needed so we can push formatting fixes
-      pull-requests: write  # needed if you want it to update PRs
+      contents: write
+      pull-requests: write
+      issues: write  # needed to add labels
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install formatters
-        run: pip install black isort
-
-      - name: Run auto-formatters
         run: |
-          black .
-          isort .
+          python -m pip install --upgrade pip
+          pip install black isort
 
-      - name: Commit & push changes
+      - name: Run auto format
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          if ! git diff --cached --quiet; then
-            git commit -m "style: auto-format with black & isort"
-            git push
-          fi
+          black . --quiet
+          isort . --quiet
+
+      - name: Commit changes if needed
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "style: auto-format with black & isort"
+          skip_fetch: true
+
+      - name: Add PR comment
+        if: github.event_name == 'pull_request'
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          message: "✅ Formatted"
+
+      - name: Add label to PR
+        if: github.event_name == 'pull_request'
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: auto-formatted
