--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        version: [1, 2, 3, 4, 5]
+        version: [1, 2, 3]
     
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
