--- a/.github/workflows/lint-bot.yml
+++ b/.github/workflows/lint-bot.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      issues: write  # needed to add labels
+      issues: write
 
     steps:
       - name: Checkout code
@@ -49,4 +49,4 @@ jobs:
         uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          labels: auto-formatted
+          labels: "bot: formatted"
